# SIEL

./: .gitignore  CITATION.cff  README.md  pyproject.toml
data/gsim/: README.md  survey_ids.txt
data/llm_gen/: README.md
data/s44k/: 1_download_pdfs.py  2_parse_grobid.py  3_parse_paragraphs.py  4_generate_s44k.py  README.md  document_ids.txt  extract_texts.sh  setup_grobid.sh
data/sild/: README.md  document_licenses.tsv
data/sild/restricted_publications/: document_ids.txt  hash_mapping.json
experiments/: base_config.sh
experiments/ed/: eval_bm25.sh  eval_plms.sh  eval_sosse.sh  train_sosse.sh
experiments/md/: eval_icl.sh  eval_rac.sh  pretrain.slurm  train_knn.sh  train_knn_gsim.sh  train_linear.sh  train_linear_da.sh  train_plms.sh  train_plms_da.sh
notebooks/: evaluation.ipynb  figure_a1.ipynb
sil/: data_utils.py  metrics.py  run_ed.py  run_icl.py  run_rac.py  train_md.py
sil/data/da/: 1_generate_da.py
sil/data/gsim/: 0_remove_surveyitems.py  1_download_gsim.py  2_generate_pairs.py  3_generate_llm_pairs.py  README.md  _2_generate_mp.py  _3_generate_sp.py  _4_generate_da_data.py
sil/sosse/: train.py
